--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "jwt-decode": "^3.1.2",
     "next": "10.2.2",
+    "next-redux-wrapper": "^6.0.2",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-form-stepper": "^1.4.1",
+    "react-otp-input": "^2.3.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2"
   }
 }
