--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "apexcharts": "^3.26.3",
     "bootstrap": "^5.0.1",
+    "clsx": "^1.1.1",
     "next": "10.2.2",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.6.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
