--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "apexcharts": "^3.26.3",
+    "axios": "^0.21.1",
+    "base64-img": "^1.0.4",
     "bootstrap": "^5.0.1",
     "clsx": "^1.1.1",
-    "axios": "^0.21.1",
     "jwt-decode": "^3.1.2",
     "next": "10.2.2",
     "next-redux-wrapper": "^6.0.2",
@@ -21,10 +22,10 @@
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.6.0",
     "react-dom": "17.0.2",
-    "react-router-dom": "^5.2.0",
     "react-form-stepper": "^1.4.1",
     "react-otp-input": "^2.3.0",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2"
