--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@stripe/stripe-js": "^1.15.0",
     "apexcharts": "^3.26.3",
     "axios": "^0.21.1",
     "base64-img": "^1.0.4",
@@ -28,6 +29,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "stripe": "^8.150.0",
     "sweetalert": "^2.1.2"
   }
 }
